crates/marion-tui/tests/snapshots/home_screens__setup_expanded_harness.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "at_every_size(&screen(Body::Setup(&v), input, \"setup\"))"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────

  HARNESSES   3 of 6 ready

  ● claude       2.1.268   ready                       headless · pane · chan…
  ● codex        0.61.0    ready                       headless · pane · ACP
❯ ◐ gemini       0.9.1     sign-in needed              headless · pane
    └ BINARY   /usr/local/bin/gemini
      VERSION  0.9.1
      AUTH     not signed in
      FIX      run gemini once and sign in
               marion uses your login, never its own
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.…

 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ gemini                                                   sign in, then r │
 ╰────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter details · r re-check · e edit types · n new type    F1 help
--- styles ---
  134  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodex/usr/local/bi"
   12  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "mariongemini"
   49  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "HARNESSESBINARYVERSIONAU"
  519  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
    1  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆"
   13  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setup❯gemini❯"
    3  Style::new().green().bg(Color::Reset)  "●●●"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   16  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded"

--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  HARNESSES   3 of 6 ready

  ● claude       2.1.268   ready                       headless · pane · channel push
  ● codex        0.61.0    ready                       headless · pane · ACP
❯ ◐ gemini       0.9.1     sign-in needed              headless · pane
    └ BINARY   /usr/local/bin/gemini
      VERSION  0.9.1
      AUTH     not signed in
      FIX      run gemini once and sign in
               marion uses your login, never its own
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.toml

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ gemini   ● opencode   ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ gemini                                                                       sign in, then r │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter details · r re-check · e edit types · n new type · a add key            F1 help
--- styles ---
  181  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodex/usr/local/bi"
   12  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "mariongemini"
   67  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "HARNESSESBINARYVERSIONAU"
  668  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
   17  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigrator"
   13  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setup❯gemini❯"
   10  Style::new().green().bg(Color::Reset)  "●●●●●●●●●✓"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   17  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded◐"

--- 160x50 ---
 ◆ marion  ~/code/acme-api                                                                                                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  HARNESSES   3 of 6 ready

  ● claude       2.1.268   ready                       headless · pane · channel push
  ● codex        0.61.0    ready                       headless · pane · ACP
❯ ◐ gemini       0.9.1     sign-in needed              headless · pane
    └ BINARY   /usr/local/bin/gemini
      VERSION  0.9.1
      AUTH     not signed in
      FIX      run gemini once and sign in
               marion uses your login, never its own
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.toml

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ gemini   ● opencode   ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys
  ● anthropic   anthropic
  ● openrouter  openrouter
  ● openrouter  openrouter:work
  keys in the macOS Keychain · a adds one · x removes the selected

  LOGINS   3 logins
  ● claude    work      default · logged in
  ◐ codex     cx        logged out
  ⠹ opencode  oc        checking…
  a adds one · u makes the selected the default · x removes it, keeping its directory · marion never logs in for you











 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ gemini                                                                                                                                   sign in, then r │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter details · r re-check · e edit types · n new type · a add key                                                                        F1 help
--- styles ---
  218  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodex/usr/local/bi"
   12  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "mariongemini"
   73  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "HARNESSESBINARYVERSIONAU"
 1062  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
   26  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigratordefault"
   18  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setup❯geminiaxaux❯"
   14  Style::new().green().bg(Color::Reset)  "●●●●●●●●●✓●●●●"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   27  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded◐◐logged"
