crates/marion-tui/tests/snapshots/home_screens__setup_form_diff_waits_for_y.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "report(&screen(Body::Setup(&v), input, \"confirm\"), 100, 30)"
---
--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  NEW AGENT TYPE   .marion/agents.toml

  name          reviewer
  harness       ‹ codex ›
  model         the harness's default
  description   Reviews a diff and reports
  tools         ‹ read ›
❯ provider      ▏optional: an endpoint provider id

  CHANGE   .marion/agents.toml
    description = "Moves data."

  + [[agent]]
  + name = "reviewer"
  + harness = "codex"
  + description = "Reviews a diff and reports"
  + tools = ["read"]






 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ Write reviewer to .marion/agents.toml?   $ +5 lines                         y yes · any key no │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  y yes · any key no                                                                       F1 help
--- styles ---
   39  Style::new().fg(Color::Reset).bg(Color::Reset)  "reviewercodexReviewsadif"
   55  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionproviderWriterevie"
   27  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NEWAGENTTYPECHANGEyanyke"
  294  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
  200  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆▏╭─────────────────────"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setup❯y"
   94  Style::new().green().bg(Color::Reset)  "+[[agent]]+name=\"reviewe"
    2  Style::new().yellow().bg(Color::Reset)  "◐2"
