crates/marion-tui/tests/snapshots/home_screens__setup_notifications_row_turns_them_off_on_enter.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "report(&screen(Body::Setup(&v), input, \"notify\"), 100, 40)"
---
--- 100x40 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  HARNESSES   3 of 6 ready

  ● claude       2.1.268   ready                       headless · pane · channel push
  ● codex        0.61.0    ready                       headless · pane · ACP
  ◐ qwen         0.9.1     sign-in needed              headless · pane
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.toml

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ qwen   ● opencode   ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys
  ● anthropic   anthropic
  ● openrouter  openrouter
  ● openrouter  openrouter:work
  keys in the macOS Keychain · a adds one · x removes the selected

  LOGINS   3 logins
  ● claude    work      default · logged in
  ◐ codex     cx        logged out
  ⠹ opencode  oc        checking…
  a adds one · u makes the selected the default · x removes it, keeping its directory · marion ne…

  NOTIFICATIONS
❯ ● on   when an agent ends or needs you · shown by osascript



 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion notify off                                                                      enter │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  tab back                                                                                 F1 help
--- styles ---
  172  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodexqwenopencodec"
    8  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionon"
   52  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "HARNESSESPROJECTAGENTTYP"
  838  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
   26  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigratordefault"
   12  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setupaxaux❯❯"
   15  Style::new().green().bg(Color::Reset)  "●●●●●●●●●✓●●●●●"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   27  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded◐◐logged"
