crates/marion-tui/tests/snapshots/home_screens__setup_profile_remove_waits_for_y.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "report(&screen(Body::Setup(&v), input, \"confirm\"), 100, 30)"
---
--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  ● claude       2.1.268   ready                       headless · pane · channel push
  ● codex        0.61.0    ready                       headless · pane · ACP
  ◐ qwen         0.9.1     sign-in needed              headless · pane
  ● opencode     1.2.3     ready                       headless · pane · ACP
  ✗ copilot      0.0.339   too old, needs ≥ 0.0.350    headless · ACP
  ○ agy          —         not installed               —

  PROJECT
  repo ~/code/acme-api · state ~/.local/state/marion · agents .marion/agents.toml

  AGENT TYPES   7 · custom ones come from .marion/agents.toml
  ● claude   ● claude-orchestrator   ● codex   ◐ qwen   ● opencode   ● reviewer   ● migrator
  ✓ .marion/agents.toml: 2 types, valid

  API KEYS   3 keys
  ● anthropic   anthropic
  ● openrouter  openrouter
  ● openrouter  openrouter:work
  keys in the macOS Keychain · a adds one · x removes the selected

  LOGINS   3 logins
❯ ● claude    work      default · logged in

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ Remove the profile work?   $ marion profile remove work                     y yes · any key no │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  y yes · any key no                                                                       F1 help
--- styles ---
  168  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodexqwenopencodec"
   37  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionworkRemovetheprofi"
   30  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "PROJECTAGENTTYPESAPIKEYS"
  505  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartWatc"
  223  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆reviewermigratordefault"
    9  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Setupax❯y"
   14  Style::new().green().bg(Color::Reset)  "●●●●●●●●●✓●●●●"
   21  Style::new().red().bg(Color::Reset)  "✗tooold,needs≥0.0.350"
   17  Style::new().yellow().bg(Color::Reset)  "◐2◐sign-inneeded◐"
